fix spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,10 +19,6 @@ body {
   color: white !important;
 }
 
-.photo-container {
-  margin-bottom: 40px;
-}
-
 .block-content {
   background-color: #98fb98;
   height: 80px;
